[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Suture.gd" type="Script" id=1]
[ext_resource path="res://SoundEffects/correct-suture.wav" type="AudioStream" id=2]
[ext_resource path="res://SoundEffects/incorrect-suture.wav" type="AudioStream" id=3]

[node name="SutureScene" type="Node"]
script = ExtResource( 1 )

[node name="MainDoctor" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.5 )
unit_db = 8.0

[node name="CorrectSuture" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0 )
stream = ExtResource( 2 )
unit_db = -2.0
pitch_scale = 1.3

[node name="IncorrectSuture" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0 )
stream = ExtResource( 3 )
unit_db = -2.0

[node name="BleedoutTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="finished" from="MainDoctor" to="." method="_on_MainDoctor_finished"]
[connection signal="timeout" from="BleedoutTimer" to="." method="_on_BleedoutTimer_timeout"]
